public/stylesheets/styles.css
/* ... */
:root .t-metro,
:root .t-inverted-metro,
:root .t-s8 {
  --color-text: #000000;
  --color-text-inverted: white;
  --color-base: #eeeeee;
  --color-disabled: #9e9e9e;
  --color-accent: #2196f3;
  --color-good: #66bb6a;
  --color-good-dark: #388e3c;
  --color-bad: #ef5350;

  --color-infinity: #ff9800;
  --color-eternity: #673ab7;
  --color-reality: #3a823d;
  --color-reality-light: #d5ffd7;
  --color-celestials: #00bcd4;
}

:root .t-dark {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: #455a64;
  --color-disabled: #37474f;
  --color-accent: #1565c0;
  --color-notification: yellow;

  --color-infinity: #ff9800;
  --color-reality-dark: #0ba00e;
  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .t-dark-metro {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: #455a64;
  --color-disabled: #37474f;
  --color-accent: #2196f3;
  --color-good: #43a047;
  --color-good-dark: #2e7d32;
  --color-bad: #e53935;
  --color-notification: yellow;

  --color-infinity: #ff9800;
  --color-eternity: #673ab7;
  --color-reality: #4caf50;
  --color-reality-dark: #0ba00e;
  --color-celestials: #00bcd4;
  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .t-s1 {
  --color-text: #000000;
  --color-text-inverted: #dbd242;
  --color-base: #dbd242;
  --color-disabled: #9a921d;
  --color-accent: black;
  --color-good: #4baf4e;
  --color-good-dark: #3c8b3e;
  --color-bad: #d72621;

  --color-infinity: #7d3c1b;
  --color-eternity: #639565;
  --color-reality: #afa3a5;
  --color-reality-light: #e8e3e4;
  --color-reality-dark: #7a7273;
  --color-celestials: #f2d6c1;
  --color-prestige--accent: #dbd242;

  --color-pelle--base: #7cb727;
}

:root .t-s4 {
  --color-text: #000000;
  --color-text-inverted: white;
  --color-base: #1b00ff;
  --color-accent: #1b00ff;
  --color-good: #ff00e0;
  --color-bad: #ff0000;
}

:root .t-s6,
:root .t-s10 {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: black;
  --color-accent: #1565c0;
  --color-good: #2f9e35;
  --color-good-dark: #08510b;
  --color-notification: yellow;

  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .t-s11 {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: black;
  --color-accent: #fbc21b;
  --color-notification: yellow;

  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .s-base--metro {
  --var-border-width: 0.1rem;
  --var-border-radius: 0;
}

/* end css vars */

body {
  overflow: hidden;
  width: 100%;
  height: 100%;
  text-align: center;
  font-family: Typewriter, serif;
  font-size: 1.1rem;
  font-weight: 300;
  line-height: 1.5;
  color: #4f5957;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
}

._kong-test body {
  overflow-y: auto;
  width: 1150px;
  height: 800px;
  border: 0.1rem solid black;
  margin: auto;
}

@font-face {
  font-family: "Open Sans Condensed";
  font-style: normal;
  font-weight: 300;
  src:
    local("Open Sans Cond Light"),
    local("OpenSans-CondensedLight"),
    url("https://fonts.gstatic.com/s/opensanscondensed/v10/gk5FxslNkTTHtojXrkp-xBEur64QvLD-0IbiAdTUNXE.woff2") format("woff2");
  unicode-range:
    U+0000-00FF,
    U+0131,
    U+0152-0153,
    U+02C6,
    U+02DA,
    U+02DC,
    U+2000-206F,
    U+2074,
    U+20AC,
    U+2212,
    U+2215,
    U+E0FF,
    U+EFFD,
    U+F000;
}

@font-face {
  font-family: Typewriter;
  src: url("MonospaceTypewriter.ttf");
}

@font-face {
  font-family: "Noto Sans";
  src: url("MonospaceTypewriter.ttf");
  unicode-range: U+F420-F430, U+2BC5-2BC6;
}

@font-face {
  font-family: Runescape;
  src: url("Runescape.ttf");
}

@font-face {
  font-family: Barrio;
  src: url("Barrio-Regular.ttf");
}

@font-face {
  font-family: "Font Awesome";
  src: url("fa-solid-900.ttf");
}

@font-face {
  font-family: Typewriter;
  src: url("BlobEmoji-Bold.ttf"), url("MonospaceTypewriter.ttf");
}

/* Background for s6 and s10 is not displayed by default */
#stars {
  display: none;
}

button:focus {
  outline: none;
}

/* #region CustomizeableTooltip */

.c-tooltip-content,
.c-tooltip-arrow {
  visibility: hidden;
  opacity: 0;
  transition: 0.4s linear;
  transition-property: opacity, visibility;
  pointer-events: none;
}

.c-tooltip-content {
  content: attr(ach-tooltip);
  width: 16rem;
  position: absolute;
  z-index: 4;
  text-align: center;
  font-size: 1.4rem;
  line-height: 1.2;
  color: #ffffff;
  background-color: #0d0d0d;
  border-radius: var(--var-border-radius, 0.3rem);
  padding: 0.7rem;
}

.c-tooltip-content--dark {
  border: 0.1rem solid #dddddd;
}

.c-tooltip-arrow {
  content: " ";
  width: 0;
  position: absolute;
  z-index: 4;
  font-size: 0;
  line-height: 0;
  border: 0.55rem solid #0d0d0d;
  transform: translate(-50%, -100%);
  transition-duration: 0.4s;
}

.c-tooltip-arrow--dark {
  border-color: #dddddd;
}

.c-tooltip--top.c-tooltip-content {
  margin-top: -0.5rem;
}

.c-tooltip--top.c-tooltip-arrow {
  border-right-color: transparent;
  border-bottom: 0;
  border-left-color: transparent;
}

.c-tooltip--bottom.c-tooltip-content {
  margin-bottom: -0.5rem;
}

.c-tooltip--bottom.c-tooltip-arrow {
  border-top: 0;
  border-right-color: transparent;
  border-left-color: transparent;
}

.c-tooltip--right.c-tooltip-content {
  margin-right: -0.5rem;
}

.c-tooltip--right.c-tooltip-arrow {
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-left: 0;
}

.c-tooltip--left.c-tooltip-content {
  margin-left: -0.5rem;
}

.c-tooltip--left.c-tooltip-arrow {
  border-top-color: transparent;
  border-right: 0;
  border-bottom-color: transparent;
}

.c-tooltip-show {
  visibility: visible;
  opacity: 1;
}
/* ... */

